# boids_recreated

./: .gitignore  Cargo.toml  README.md  frag_binary  vert_binary
src/: compute.wgsl  draw.wgsl  main.rs  naga_convert.rs  shader.comp  shader.frag  shader.vert
