[package]
name = "boids_recreated"
version = "0.1.0"
authors = ["DevinBayly <baylyd@email.arizona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
image = "0.23"
wgpu = "0.7"
winit = "0.22"
rand = "0.8.3"
shaderc = "0.7"






