[package]
name = "boids_recreated"
version = "0.1.0"
authors = ["DevinBayly <baylyd@email.arizona.edu>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
image = "0.23"
raw-window-handle = "0.3"
winit = "0.25"
shaderc = "0.7"
cgmath = "0.18"
wgpu = { version="0.10", features=["spirv"]}
pollster = "0.2"
hdf5 ="0.7.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
naga = {version = "0.7.0", features = ["glsl-in","spv-out"]}